--- a/claims-app/package.json
+++ b/claims-app/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "PORT=80 react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "build": "PORT=80 react-scripts build",
+    "test": "PORT=80 react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
