--- a/claims-app/package.json
+++ b/claims-app/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "start": "PORT=80 react-scripts start",
     "build": "PORT=80 react-scripts build",
+    "heroku-postbuild": "react-scripts build",
     "test": "PORT=80 react-scripts test",
     "eject": "react-scripts eject"
   },
